Update the install INI files
Mostly just switch to wildcards.

--- a/src/doors/clans-src/installer/install.ini
+++ b/src/doors/clans-src/installer/install.ini
@@ -211,26 +211,21 @@ explained in CLANS.DOC.
 after exiting this program.
 :***** files for install go here
 :install.files
-o clans.exe
-o config.exe
-o reset.exe
-o clans.pak
-o clans.ini
-o quests.ini
-o quests.hlp
-o reset.hlp
+o *.cmd
+o *.exe
+o *.opt
 o clanad.ans
-o clans.cfj
-o news.txt
-o /Outbound
+o clans*
+o config*
+o /outbound
+o pcedit*
+o quests.*
+o reset*
 o route.smp
-o worldndx.smp
-o upgrade.doc
-o clans.doc
-o whatsnew.txt
 o runclans.bat
-o lockout.txt
-o odoors62.dll
+o upgrade.doc
+o worldndx.smp
+o whatsnew.*
 :***** upgrade info
 :upgrade
 |09Upgrading...
@@ -258,23 +253,24 @@ previous versions.  Please read UPGRADE.DOC
 after exiting this program.
 :***** files to upgrade go here
 :upgrade.files
-o clans.exe
-o config.exe
-o reset.exe
-o clans.pak
-s clans.ini
-s quests.ini
-s quests.hlp
-s reset.hlp
+o *.cmd
+o *.exe
+o *.opt
 o clanad.ans
 s clans.cfj
-s news.txt
-o /Outbound
-s route.smp
-s worldndx.smp
-o upgrade.doc
 o clans.doc
-o whatsnew.txt
-s runclans.bat
+s clans.ini
+o clans.pak
+o config*
 s lockout.txt
-o odoors62.dll
+o /outbound
+o pcedit*
+s quests.*
+o reset*
+s route.cfg
+s route.smp
+s runclans.bat
+s schemes.txt
+o upgrade.doc
+o whatsnew.095
+s worldndx.smp
