--- a/src/doors/clans-src/installerdk/clandev.ini
+++ b/src/doors/clans-src/installerdk/clandev.ini
@@ -3,7 +3,7 @@ The Clans Development Kit -- INI file
 
 
 Name of the GUM file we use
-!CLANDEV.GUM
+!clandev.gum
 :title
     |01€|09|17∞|01|16€|09|17±|11∞±|01|16ﬂ |07‹|14|23‹‹±|07|16ﬂﬂﬂ€|14|23‹|07|16‹ |01ﬂﬂﬂﬂﬂ|09|17±|01|16ﬂ|09|17≤|01|16ﬂﬂ|09|17∞|01|16ﬂﬂﬂﬂﬂﬂﬂﬂﬂﬂﬂﬂﬂﬂﬂﬂﬂ|09|17∞|01|16ﬂﬂﬂﬂ |07‹‹€€ﬂ€|14|23‹|15≤±|07|16‹ |09|17∞|11∞±|09∞|01|16€|09|17±≤|07|16
     |01€|09|17±|08∞|01|16€€ﬂ |07€|14|23€€|15€|07|16›   ‹|14|23‹|15€|07|16€  ‹|15|23‹|07|16€      ‹|15|23‹‹|07|16€ﬂ€|14|23‹|15‹|07|16‹ |14|23∞‹‹∞|07|16ﬂ€|15|23‹|07|16‹    €|14|23€‹∞|07|16‹‹ ﬂﬂﬂ  |01€€|09|17∞|11∞±|09∞±|07|16
@@ -78,11 +78,11 @@ o npc-mon.txt
 o monsters.txt
 o example.ini
 o pak.lst
-o makepak.exe
-o ecomp.exe
-o mcomp.exe
-o makenpc.exe
-o chew.exe
+o makepak*
+o ecomp*
+o mcomp*
+o makenpc*
+o chew*
 :installdone
 
 |07It's done.  To begin, read |15clandev.doc|07.  (You may type READ CLANDEV.DOC
@@ -104,8 +104,8 @@ o npc-mon.txt
 o monsters.txt
 o example.ini
 s pak.lst
-o makepak.exe
-o ecomp.exe
-o mcomp.exe
-o makenpc.exe
-o chew.exe
+o makepak*
+o ecomp*
+o mcomp*
+o makenpc*
+o chew*
