I don't like rpi sorting first... lower-case it.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ include:
       build_doors: "yes"
   - local: '.gitlab-ci-unix.yml'
     inputs:
-      os: 'RaspberryPiOS'
+      os: 'raspberrypi'
       platform: 'arm64'
       tagname: 'RaspberryPi'
       build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1 NO_ABSOLUTE_RPATH=1'
