Disable the x86 mingw builds
Windows doesn't support 32-bit anymore, and Synchronet doesn't
really support mingw.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,16 +65,16 @@ include:
       build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1 NO_ABSOLUTE_RPATH=1'
       has_javascript: 'no'
       build_doors: "yes"
-  - local: '.gitlab-ci-unix.yml'
-    inputs:
-      os: 'mingw-w64'
-      platform: 'x86'
-      tagname: 'FreeBSD'
-      cross_platform: 'yes'
-      build_flags: 'AR=/home/admin/mingw-w32/bin/i686-w64-mingw32-ar AS=/home/admin/mingw-w32/bin/i686-w64-mingw32-as CC="ccache /home/admin/mingw-w32/bin/i686-w64-mingw32-gcc" CXX="ccache /home/admin/mingw-w32/bin/i686-w64-mingw32-g++" RANLIB=/home/admin/mingw-w32/bin/i686-w64-mingw32-ranlib WINDRES=/home/admin/mingw-w32/bin/i686-w64-mingw32-windres RELEASE=1'
-      has_javascript: 'no'
-      has_curses: 'no'
-      build_doors: "yes"
+#  - local: '.gitlab-ci-unix.yml'
+#    inputs:
+#      os: 'mingw-w64'
+#      platform: 'x86'
+#      tagname: 'FreeBSD'
+#      cross_platform: 'yes'
+#      build_flags: 'AR=/home/admin/mingw-w32/bin/i686-w64-mingw32-ar AS=/home/admin/mingw-w32/bin/i686-w64-mingw32-as CC="ccache /home/admin/mingw-w32/bin/i686-w64-mingw32-gcc" CXX="ccache /home/admin/mingw-w32/bin/i686-w64-mingw32-g++" RANLIB=/home/admin/mingw-w32/bin/i686-w64-mingw32-ranlib WINDRES=/home/admin/mingw-w32/bin/i686-w64-mingw32-windres RELEASE=1'
+#      has_javascript: 'no'
+#      has_curses: 'no'
+#      build_doors: "yes"
   - local: '.gitlab-ci-unix.yml'
     inputs:
       os: 'mingw-w64'
