Mark OpenBSD as a slow system
The Linux install target is now the long pole in the CI pipelines.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ include:
       tagname: 'OpenBSD'
       build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1 NO_ABSOLUTE_RPATH=1'
       has_graphics: 'no'
+      slow_system: 'yes'
   - local: '.gitlab-ci-unix.yml'
     inputs:
       os: 'netbsd'
