--- a/src/doors/clans-src/src/langcomp.vcxproj.filters
+++ b/src/doors/clans-src/src/langcomp.vcxproj.filters
@@ -18,6 +18,15 @@
     <ClCompile Include="LANGCOMP.C">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="win_wrappers.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="serialize.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="crc.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DEFINES.H">
